// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StaticLink renders external link as an Next Link when in dynamic mode 1`] = `
<a
  className="jsx-3574172415"
  href="//href-link-as-dynamic"
>
  <div
    className="something-to-link-as-dynamic"
  />
</a>
`;

exports[`StaticLink renders external link as an anchor tag when in static mode 1`] = `
<a
  className="jsx-3574172415"
  href="//href-link"
>
  <div
    className="something-to-link-as-static"
  />
</a>
`;
